# CUDA-Matrix-Library

./: CMakeCache.txt  CMakeLists.txt  CUDA MakeFile Generator.ipynb  Makefile  Untitled0.ipynb  cmake_install.cmake  cpuMatrix.cpp  main.cpp  mnist_loader.cpp  mnist_loader.h  utilities.cpp  utilities.h
.ipynb_checkpoints/: CUDA MakeFile Generator-checkpoint.ipynb  Untitled0-checkpoint.ipynb
Executable/Debug/: CUDA_Matrix_Library_V2
cuda/: ColSums.cu  ColSums.h  GPUMatrix.h  GPUMatrixMath.h  Math.h  Multiplication.cu  Multiplication.h  Test.cu  Test.h  TestCUDA.cu  TestCUDA.h  Transpose.cu  Transpose.h  add.cu  add.h  config.h  constants.h  copy.cu  copy.h  edivide.cu  edivide.h  emultiply.cu  emultiply.h  exp.cu  exp.h  gpuMemoryManager.cu  log.cu  log.h  maxrows.cu  maxrows.h  reduction.cu  reduction.h  repeat.cu  repeat.h  sigmoid.cu  sigmoid.h  slice.cu  slice.h  subtract.cu  subtract.h
